--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1,4 +1,5 @@
 $fa-font-path: "fonts/font-awesome/";
+$icon-font-path: "{{ site.github.url }}/assets/fonts/bootstrap";
 @import 'font-awesome';
 
 // (Your custom CSS Here)
